kubernetes/staging/shopping-cart.yaml
---
# Shopping-cart microservice service
apiVersion: v1
kind: Service
metadata:
  name: shopping
spec:
  type: ClusterIP
  selector:
    app: shopping
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
spec:
  selector:
    matchLabels:
      app: shopping
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
      - name: shopping
        image: registry.gitlab.com/gitops-project1/application-code/microservice/shopping-cart:efdd380b
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: gitlab
